# RTS_tasks

Task1/: CMakeLists.txt  hist.c  hist.h  main.c
Task2/: CMakeLists.txt  bdfile.c  bdfile.h  data.c  data.h  hist.c  hist.h  histogram.db  main.c
Task3/: CMakeLists.txt
Task3-REDIS/: README.md
Task3-REDIS/App/: CMakeLists.txt  bdfile.c  bdfile.h  hist.c  hist.h  main.c
Task3-REDIS/Processor/: CMakeLists.txt  main.c
Task3/app/: CMakeLists.txt  app.c  dbfile.c  hist.c  hist.h
Task3/processor/: CMakeLists.txt  processor.c
